@@ -4,7 +4,6 @@ import dao.ShowtimeDAO;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
-import javafx.geometry.Insets;
 import javafx.scene.Node;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
@@ -16,36 +15,23 @@ import javafx.stage.Stage;
 import models.Showtime;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 public class ShowtimeListController {
 
-    @FXML
-    private Button btnAdd;
+    @FXML private Button btnAdd;
+    @FXML private Button btnEdit;
+    @FXML private Button btnFind;
+    @FXML private AnchorPane paneFind;
+    @FXML private AnchorPane paneShowtimeList;
+    @FXML private ScrollPane scrShowtimeItemList;
+    @FXML private VBox showtimeItemList;
+    @FXML private TextField tfFind;
+    @FXML private AnchorPane tfFindShowtime;
 
-    @FXML
-    private Button btnEdit;
-
-    @FXML
-    private Button btnFind;
-
-    @FXML
-    private AnchorPane paneFind;
-
-    @FXML
-    private AnchorPane paneShowtimeList;
-
-    @FXML
-    private ScrollPane scrShowtimeItemList;
-
-    @FXML
-    private VBox showtimeItemList;
-
-    @FXML
-    private TextField tfFind;
-
-    private ShowtimeDAO showtimeDAO = new ShowtimeDAO();
+    private final ShowtimeDAO showtimeDAO = new ShowtimeDAO();
 
     @FXML
     public void initialize() {
@@ -55,7 +41,7 @@ public class ShowtimeListController {
     private void loadShowtimeItems() {
         showtimeItemList.getChildren().clear();
 
-        List<Showtime> allShowtimes = showtimeDAO.getAllShowtimes();
+        List<Showtime> allShowtimes = ShowtimeDAO.getAllShowtimes();
 
         Map<String, List<Showtime>> grouped = allShowtimes.stream()
                 .collect(Collectors.groupingBy(s -> s.getMovieId() + "-" + s.getRoomId() + "-" + s.getShowDate()));
@@ -80,27 +66,24 @@ public class ShowtimeListController {
         }
     }
 
-
     @FXML
     void handleAddNewShowtime(ActionEvent event) {
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/fxml_Manager/Showtime/AddShowtime.fxml"));
             AnchorPane addShowtimePane = loader.load();
 
-            //create a new stage to add showtime
             Stage stage = new Stage();
             stage.setTitle("Add New Showtime");
             stage.setScene(new Scene(addShowtimePane));
             stage.show();
 
-            //auto refresh after add showtime
+            // Auto refresh after add
             stage.setOnHidden(e -> loadShowtimeItems());
 
         } catch (IOException e) {
-            System.out.println();
+            e.printStackTrace();
         }
     }
-
 
     @FXML
     void handleFindShowtime(ActionEvent event) {
@@ -110,10 +93,48 @@ public class ShowtimeListController {
             return;
         }
 
-        List<Showtime> allShowtimes = showtimeDAO.getAllShowtimes().stream()
+        List<Showtime> filtered = ShowtimeDAO.getAllShowtimes().stream()
                 .filter(s -> s.getMovieTitle().toLowerCase().contains(keyword) ||
                         s.getRoomName().toLowerCase().contains(keyword))
-                .collect(Collectors.toList());
+                .toList();
+
+        showtimeItemList.getChildren().clear();
+
+        Map<String, List<Showtime>> grouped = filtered.stream()
+                .collect(Collectors.groupingBy(s -> s.getMovieId() + "-" + s.getRoomId() + "-" + s.getShowDate()));
+
+        for (List<Showtime> group : grouped.values()) {
+            if (group.isEmpty()) continue;
+
+            Showtime first = group.getFirst();
+
+            try {
+                FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/fxml_Manager/Showtime/ShowtimeItem.fxml"));
+                Node itemNode = loader.load();
+
+                ShowtimeItemController itemController = loader.getController();
+                itemController.setShowtimeItem(first, group);
+
+                showtimeItemList.getChildren().add(itemNode);
+
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    @FXML
+    public void handleFindClick(javafx.scene.input.MouseEvent mouseEvent) {
+        String keyword = tfFind.getText().trim().toLowerCase();
+        if (keyword.isEmpty()) {
+            loadShowtimeItems();
+            return;
+        }
+
+        List<Showtime> allShowtimes = ShowtimeDAO.getAllShowtimes().stream()
+                .filter(s -> s.getMovieTitle().toLowerCase().contains(keyword) ||
+                        s.getRoomName().toLowerCase().contains(keyword))
+                .toList();
 
         showtimeItemList.getChildren().clear();
 
@@ -123,10 +144,10 @@ public class ShowtimeListController {
         for (List<Showtime> group : grouped.values()) {
             if (group.isEmpty()) continue;
 
-            Showtime first = group.get(0);
+            Showtime first = group.getFirst();
 
             try {
-                FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/ShowtimeItem.fxml"));
+                FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/fxml_Manager/Showtime/ShowtimeItem.fxml"));
                 Node itemNode = loader.load();
 
                 ShowtimeItemController itemController = loader.getController();
